--- a/Practice/Theory/biblio.bib
+++ b/Practice/Theory/biblio.bib
@@ -1,28 +1,13 @@
-@BOOK{Afanasyev92,
-author = "Афанасьев, В. В. and Василевский, О. Н.",
-title = "Расчеты электрических цепей
-на программируемых микрокалькуляторах",
-address = "М.",
-publisher = "Энергоиздат",
-year = 1992,
-numpages = 190,
-language = "russian"
+@book{brics,
+    author = "Jesper Makholm Byskov",
+    title = "Enumerating maximal independent sets with applications to graph colouring",
+    year = 2004,
+    language = "english"
 }
- 
-@BOOK{Vasylenko92,
-author = "Василенко, М. В.",
-title = "Теорiя коливань: Навчальний посiбник",
-address = "К.",
-publisher = "Вища школа",
-year = 1992,
-numpages = 430,
-language = "ukrainian"
-}
- 
-@MISC{doe:website,
-      AUTHOR = "John Doe",
-      TITLE = "the website title",
-      MONTH = feb,
-      YEAR = 2011,
-      NOTE = "url{http://whereever/file.ext}"
+
+@book{fast,
+    author = "Richard Beigel, David Eppstein",
+    title = "3-Coloring in Time $O(1.3289^n)$",
+    year = 2000,
+    language = "english"
 }
